<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!-- TODO: It is better to have every String literal to be in the strings.xml ...Caleb   -->
    <PreferenceCategory
        app:key="alert_category"
        app:title="@string/alert_setting">

        <SwitchPreferenceCompat
            app:key="message"
            app:title="@string/message_setting_title"
            app:summary="@string/message_setting_summary"
            app:defaultValue="true"/>
            <EditTextPreference
                app:key="defaultmessagetext"
                app:title="@string/default_message_title"
                app:summary="@string/default_message_summary" />
        <SwitchPreferenceCompat
            app:key="geolocation"
            app:title="@string/geolocation_setting_title"
            app:summary="@string/geolocation_setting_summary"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="takephoto"
            app:title="@string/takephoto_setting_title"
            app:summary="@string/takephoto_setting_summary"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="recordaudio"
            app:title="@string/recordaudio_setting_title"
            app:summary="@string/recordaudio_setting_summary"
            app:defaultValue="true"/>

        <Preference
            app:key="logout"
            app:title="@string/string_log_out"
            />
    </PreferenceCategory>
    <!--<PreferenceCategory
        app:key="privacy_category"
        app:title="Privacy settings">

        <SwitchPreferenceCompat
            app:key="broadcast"
            app:title="Enable emergency broadcasting"
            app:summary="It does nothing for now -&#45;&#45;&#45;&#45;&#45;&#45;Caleb"
            />

    </PreferenceCategory>-->
    <PreferenceCategory
        app:key="feedback_category"
        app:title="Have your say">

        <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>



</PreferenceScreen>