<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.help.ui.chatRoom.ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/chat_top"
        android:layout_above="@+id/chat_bot"
        android:background="@android:color/white"
        android:paddingHorizontal="16dp"
        tools:listitem="@layout/message"
        />
<LinearLayout
        android:id="@+id/chat_top"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_cancel"
            android:text="@string/cancel_the_alert"
            android:textColor="#FFFFFF"
            android:textSize="12sp"

            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_light"
        android:id="@+id/chat_bot"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/grey_light"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/voice_upload"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_keyboard_voice_24" />

            <EditText
                android:id="@+id/chat_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="6"
                android:background="@drawable/edit_background"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="2"
                android:background="@drawable/chat_button_shape"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/function_background">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_baseline_camera_alt_24">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/photo"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_baseline_photo_library_24">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/image"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_baseline_videocam_24">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/video"
                    android:textAlignment="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_baseline_location_on_24">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/location"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>